--- a/index.html
+++ b/index.html
@@ -18,9 +18,39 @@
       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
   </div>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore, velit.
+    </p>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="card">
+      <h3>Messenger clone</h3>
+      <button><a href="https://github.com/Khan-Shuvo/messeging_colon"></a>clickme</button>
+    </div>
+    <div class="card">
+      <h3>Calculetor</h3>
+      <button><a href="https://github.com/Khan-Shuvo/calculetro_pyqt6"></a>clickme</button>
+    </div>
+    <div class="card">
+      <h3>Weather app</h3>
+      <button><a href="https://github.com/Khan-Shuvo/Weather-app">clickme</a></button>
+    </div>
+
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: abc@example.com</p>
+  </section>
 </body>
 </html>
