making the navbar, tob banar and add png img for banar

--- a/home_work_1/index.html
+++ b/home_work_1/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <nav>
+        <div class="navigation">
+            <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">product</a></li>
+                <li><a href="#">categores</a></li>
+                <li><a href="#">sale</a></li>
+            </ul>
+        </div>
+        <div class="logo">
+            <h4>mejioo</h4>
+        </div>
+    </nav>
+    <div class="top_banar">
+        <div class="top_banar_img"><img src="assets/img3.png" alt="" srcset=""></div>
+        <div class="top_banar_img"><img src="assets/img1.png" alt="" srcset=""></div>
+        <div class="top_banar_text">
+            <h2>
+                MEJIWOO
+            </h2>
+            <h5>
+                미지우 
+            </h5>
+            <hr>
+            <p>make your everyday look prettierwith MEJIWOOKorean Made</p>
+
+        </div>
+        <div class="top_banar_img"><img src="assets/img4.png" alt="" srcset=""></div>
+        <div class="top_banar_img"><img src="assets/img2.png" alt="" srcset=""></div>
+    </div>
 </body>
+
 </html>
