correcting the card title

--- a/home_work_1/index.html
+++ b/home_work_1/index.html
@@ -54,9 +54,9 @@
                         alt="Example image 1" />
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title">Beautiful Landscape</h3>
+                    <h3 class="card-title">spring</h3>
                     <div class="card-action">
-                        <button class="btn">View details</button>
+                        <button class="btn">more</button>
                     </div>
                 </div>
             </article>
@@ -69,9 +69,9 @@
                         alt="Example image 2" />
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title">Minimal Workspace</h3>
+                    <h3 class="card-title">summer</h3>
                     <div class="card-action">
-                        <button class="btn">View details</button>
+                        <button class="btn">more</button>
                     </div>
                 </div>
             </article>
@@ -84,9 +84,9 @@
                         alt="Example image 3" />
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title">Minimal Workspace</h3>
+                    <h3 class="card-title">winter</h3>
                     <div class="card-action">
-                        <button class="btn">View details</button>
+                        <button class="btn">more</button>
                     </div>
                 </div>
             </article>
